--- a/生产力脚本/inotify-tools+rsync/sersync/etc/sersync.conf
+++ b/生产力脚本/inotify-tools+rsync/sersync/etc/sersync.conf
@@ -28,11 +28,17 @@ real_time_sync_delay=60
 #开启周期性全量同步，定期对整个目录进行同步。完成首次全量同步后，周期性全量同步只是同步变化的数据
 full_rsync_enable=1
 
-#全量同步周期(单位d)
-full_rsync_interval=3
+#开启多线程同步，仅对全量同步生效，针对文件数量多场景
+parallel_rsync_enable=0
+
+#多线程同步数量
+#parallel_rsync_num=10
 
 #全量同步超时时间单位h
 full_rsync_timeout=12
+
+#全量同步cron表达式，同linux定时任务时间格式
+cron_exp="05 23 * * *"
 
 #rsyncd模块与监听目录备份关系，格式[模式名=监听目录,监听目录]一个模式可以对应多个待同步目录逗号
 #分隔，要求模式名称唯一，一个待同步目录只能对应一个模块，否则第一个生效。
@@ -47,18 +53,19 @@ rsync_user=rsync
 #rsync密码文件
 rsync_passwd_file=/etc/rsync.passwd
 
-#同步超时时间
-rsync_timeout=180
+#实时同步超时时间(s)
+real_time_rsync_timeout=180
 
-#传输限速
-rsync_bwlimit=50M
+#单个rsync进程传输限速
+rsync_bwlimit=10M
 
 #rsync额外参数，建议开启--partial、--append-verify、--ignore-missing-args，当前已开启必要参数
 #-rlptDR --delete
-extra_rsync_args="-v --partial --append-verify --ignore-missing-args"
+extra_rsync_args="-v --partial --append-verify --ignore-missing-args --contimeout 120"
 
 #保留多少天内的历史备份(单位d)，防止误删源文件导致数据丢失，备份目录为rsynd模块下/history-backup/，
-#建议大于全量同步周期full_rsync_interval的时间否则在未开启实时同步时，数据有误删除无法恢复的风险。
+#建议大于全量同步周期cron_exp配置的时间否则在未开启实时同步时，数据有误删除无法恢复的风险。使用rsync
+#的--backup和--backup-dir参数实现
 keep_history_backup_days=7
 #########################################同步配置#########################################
 
