--- a/生产力脚本/inotify-tools+rsync/sersync/etc/sersync.conf
+++ b/生产力脚本/inotify-tools+rsync/sersync/etc/sersync.conf
@@ -25,6 +25,12 @@ real_time_sync_enable=1
 #实时同步延时(单位s)，实时同步开启后生效，作为实时同步周期。
 real_time_sync_delay=60
 
+#实时同步并发数，根据服务器配置配置，不建议过高
+#real_time_sync_parallel_num=10
+
+#实时同步超时时间(s)
+real_time_rsync_timeout=180
+
 #开启周期性全量同步，定期对整个目录进行同步。完成首次全量同步后，周期性全量同步只是同步变化的数据
 full_rsync_enable=1
 
@@ -53,10 +59,7 @@ rsync_user=rsync
 #rsync密码文件
 rsync_passwd_file=/etc/rsync.passwd
 
-#实时同步超时时间(s)
-real_time_rsync_timeout=180
-
-#单个rsync进程传输限速
+#单个rsync进程传输限速，总的带宽速率为并发数量乘以单个进程带宽限速
 rsync_bwlimit=10M
 
 #rsync额外参数，建议开启--partial、--append-verify、--ignore-missing-args，当前已开启必要参数
