--- a/运维平台/监控相关/zabbix/nfs/userparameter_nfs.conf
+++ b/运维平台/监控相关/zabbix/nfs/userparameter_nfs.conf
@@ -1,2 +1,2 @@
 #NFS状态监测
-UserParameter=nfs[*],/apps/application/zabbix/scripts/nfs_check.sh $1
+UserParameter=nfsd[*],/etc/zabbix/zabbix_agentd.d/nfsd_status.sh $1 $2
