--- a/生产力脚本/inotify-tools+rsync/sersync/etc/sersync.conf
+++ b/生产力脚本/inotify-tools+rsync/sersync/etc/sersync.conf
@@ -1,8 +1,8 @@
 #########################################通用配置#########################################
-#工作目录一般不修改
+#工作目录一般不修改，是sersync软件的安装目录。
 work_dir=/usr/local/sersync
 
-#日志目录一般不修改
+#日志目录一般不修改，用于存放运行过程中的日志文件。
 logs_dir=${work_dir}/logs
 #########################################通用配置#########################################
 
@@ -25,7 +25,7 @@ real_time_sync_enable=1
 #实时同步延时(单位s)，实时同步开启后生效，作为实时同步周期。
 real_time_sync_delay=60
 
-#实时同步并发数，根据服务器配置配置，不建议过高
+#实时同步并发数，根据服务器资源配置，默认为10，不建议过高。
 #real_time_sync_parallel_num=10
 
 #实时同步超时时间(s)
@@ -34,23 +34,20 @@ real_time_rsync_timeout=180
 #开启周期性全量同步，定期对整个目录进行同步。完成首次全量同步后，周期性全量同步只是同步变化的数据
 full_rsync_enable=1
 
-#开启多线程同步，仅对全量同步生效，针对文件数量多场景
-parallel_rsync_enable=0
+#周期性全量同步多线程数量，默认是CPU等于核数。
+#full_rsync_parallel_rsync_num=10
 
-#多线程同步数量
-#parallel_rsync_num=10
-
-#全量同步超时时间单位h
+#全量同步超时时间，超过该时间后将推出同步进程，单位是小时（h）
 full_rsync_timeout=12
 
-#全量同步cron表达式，同linux定时任务时间格式
+#全量同步cron表达式，配置格式同linux定时任务cron时间格式。
 cron_exp="05 23 * * *"
 
 #rsyncd模块与监听目录备份关系，格式[模式名=监听目录,监听目录]一个模式可以对应多个待同步目录逗号
 #分隔，要求模式名称唯一，一个待同步目录只能对应一个模块，否则第一个生效。
 rsyncd_mod=('backup1=/data/file,/data/db' 'backup2=/data/img')
 
-#模块所在主机地址支持多个地址使用逗号分隔，多个地址实现多份备份
+#模块所在主机地址支持多个地址使用逗号分隔，多个地址实现多份备份。
 rsyncd_ip=('backup1=127.0.0.1:873' 'backup2=127.0.0.1:873,192.168.0.163:873')
 
 #rsync同步的用户
@@ -59,7 +56,7 @@ rsync_user=rsync
 #rsync密码文件
 rsync_passwd_file=/etc/rsync.passwd
 
-#单个rsync进程传输限速，总的带宽速率为并发数量乘以单个进程带宽限速
+#单个rsync进程传输限速，总的带宽速率为并发数量乘以单个进程带宽限速。
 rsync_bwlimit=10M
 
 #rsync额外参数，建议开启--partial、--append-verify、--ignore-missing-args，当前已开启必要参数
@@ -77,4 +74,7 @@ keep_history_backup_days=7
 exec_command_enable=0
 #监听目录对应的脚本名称
 #exec_command_list=('/data/file=clean_file.sh' '/data/img=clean_img.sh')
+
+#promethues metrics目录，用于node-exporter获取监控指标
+textfile_collector_dir=/usr/local/node_exporter/textfile_collector
 #########################################其他配置#########################################
